# oscarsSemanticWebService

./: README.md  pyproject.toml
app/: __init__.py  agent.py  icat.py  main.py  ontology.py
docs/: agent-flow.mmd
tests/: test_agent.py  test_catalogue.py
