[project]
name = "semantic-web-service"
version = "0.1.0"
description = "Local FastAPI POC for semantically annotated ESRF-style catalogue endpoints."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "owlready2>=0.46",
    "rdflib>=7.0.0",
    "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
semantic-agent = "app.agent:main"

[tool.setuptools]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
